# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml  rust.yml
.sqlx/: query-0a8192e5b76509d1c3bbbcb489efb924c9002aa7634b3697d09d4d20c7091f3e.json  query-40166c040b8e46f94be71b16a2efc30b1e07b2a35c8522a6afc800e531237cfe.json  query-49b002c776370c992484829dbf2414d204b2cb7d26daad5dae7308899d88d3c3.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250502123552_add_status_to_subscriptions.sql  20250502124237_make_status_not_null_in_subscriptions.sql  20250502124815_create_subscriptions_tokens_table.sql  20250506135651_create_users_table.sql  20250506143450_rename_password_column.sql  20250506151423_add_salt_to_users.sql  20250506155245_remove_salt_from_users.sql  20250512151557_seed_user.sql  20250515101710_create_idempotency_table.sql  20250515142700_relax_null_checks_on_idempotency.sql  20250515143834_create_newsletter_issues_table.sql  20250515144052_create_issue_delivery_queue_table.sql  25042025_create_subscription_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
