[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path="src/main.rs"
name="zero2prod"


[dependencies]
actix-web="4"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio={ version = "1.44.2", features = ["macros", "rt-multi-thread"] }
uuid = {version ="1.16.0", features = ["v4"]}
chrono = {version = "0.4.40", default-features = false, features = ["clock"]}
log = "0.4.27"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.18"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claims = "0.8.0"
validator = "0.20.0"
rand={ version = "0.9.1", features = ["std_rng"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
fake = "4.3.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
wiremock = "0.6.3"
